--- a/Home.html
+++ b/Home.html
@@ -15,9 +15,9 @@
         <nav>
             <ul>
                 <li class="active"><a href="Home.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">My Cv</a></li>
-                <li><a href="#">My Profile</a></li>
+                <li><a href="About.Html">About</a></li>
+                <li><a href="Mycv.html">My Cv</a></li>
+                <li><a href="Profile.html">My Profile</a></li>
                 <li><a href="index.html">Logout</a></li>
             </ul>
         </nav>
